--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
     <script rel="text/javascript" src="js/app.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -34,6 +35,7 @@
 
           <!-- you can put rows inside of columns! -->
           <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
+          <h2>Player 1 goes first</h2>
           <div class="row">
             <div class="col-md-4 box" id="item7"></div>
             <div class="col-md-4 box" id="item8"></div>
@@ -45,7 +47,7 @@
             <div class="col-md-4 box" id="item2"></div>
             <div class="col-md-4 box" id="item3"></div>
           </div>
-        <button class="btn btn-default" type="submit">Reset</button>
+          <button class="btn">Reset</button>
         </div>
       </div>
     </div>
